<!--
  ~ Copyright 2017 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Hello World</string>
    <string name="title_activity_hello">Hello Activity blah blah</string>
    <string name="title_activity_goodbye">Goodbye Activity ooooo</string>
    <string name="hello_instant_world">Hello instant World!</string>
    <string name="goodbye_instant_world">Goodbye instant World!</string>
    <string name="nothing_to_see">Nothing to see here, press back.</string>
    <string name="whats_this">Say Goodbye</string>
    <string name="het_napja">A Het Napjai</string>
    <string name="hetfo">hétfő</string>
    <string name="kedd">kedd</string>
    <string name="szerda">szerda</string>
    <string name="csutortok">csütörtök</string>
    <string name="pentek">péntek</string>
    <string name="tesi">tesi</string>
    <string name="olasz">olasz</string>
    <string name="kemia">kémia</string>
    <string name="enek">ének</string>
    <string name="irodalom">irodalom</string>
    <string name="ofo">ofő</string>
    <string name="nulladik_ora">nulladik óra</string>
    <string name="elso_ora">első óra</string>
    <string name="masodik_ora">második óra</string>
    <string name="harmadik_ora">harmadik óra</string>
    <string name="negyedik_ora">negyedik óra</string>
    <string name="otodik_ora">ötödik óra</string>
    <string name="hatodik_ora">hatodik óra</string>
    <string name="hetedik_ora">hetedik óra</string>
</resources>
