<!--
  ~ Copyright 2017 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/hetNapjaView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/het_napja" />

    <TextView
        android:id="@+id/nulladikOraView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nulladik_ora" />

    <TextView
        android:id="@+id/elsoOraView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elso_ora" />

    <TextView
        android:id="@+id/masodikOraView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masodik_ora" />

    <TextView
        android:id="@+id/harmadikOraView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/harmadik_ora" />

    <TextView
        android:id="@+id/negyedikOraView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/negyedik_ora" />

    <TextView
        android:id="@+id/otodikOraView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otodik_ora" />

    <TextView
        android:id="@+id/hatodikOraView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hatodik_ora" />

    <TextView
        android:id="@+id/hetedikOraView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hetedik_ora" />
</LinearLayout>


